--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: ruby
 
 os:
-  - osx # Mavericks
+  - osx # default 10.9
+
+osx_image: xcode7 # specify 10.10
 
 before_install:
   - brew update
