--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,15 @@ language: ruby
 os:
   - osx # default 10.9
 
-osx_image: xcode7.3 # specify 10.11
+osx_image: xcode6.4 # specify 10.10
+
+env:
+  - TAP=osgeo/osgeo4mac
+  - FORMULA=gdal-grass64
 
 before_install:
-  - echo $PATH
   - brew update
+  - brew tap $TAP
+  - brew install --build-bottle $FORMULA
+  - brew bottle $FORMULA
+  - exit
