--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 language: ruby
+rvm:
+  - system
 
 os:
   - osx # default 10.9
 
-osx_image: xcode6.4 # specify 10.10
+# osx_image: xcode6.4 # specify 10.10
 
 env:
   - TAP=osgeo/osgeo4mac
   - FORMULA=gdal-grass64
 
 before_install:
+  - echo $PATH
   - brew update
   - brew tap $TAP
   - brew install --build-bottle $FORMULA
