add brew cask install xquartz

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ before_install:
   - echo $PATH
   - brew update
   - brew tap $TAP
+  - brew cask install xquartz # not needed for 10.9????
   - brew install --build-bottle $FORMULA
   - brew bottle $FORMULA
