--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,7 @@ rvm:
 os:
   - osx # default 10.9
 
-osx_image: xcode6.4 # specify 10.10
-
-# env:
-#   - FORMULA=gdal-grass64
+# osx_image: xcode6.4 # specify 10.10
 
 before_install:
   - echo $PATH
