correct use of travis_wait..

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,5 @@ before_install:
   - brew update
   - brew tap $TAP
   # - brew cask install xquartz # not needed for 10.9????
-  - brew install --build-bottle $FORMULA
+  - travis_wait 30 brew install --build-bottle $FORMULA
   - brew bottle $FORMULA
-
-install: travis_wait 30 mvn install
