--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 os:
   - osx # default 10.9
 
-# osx_image: xcode6.4 # specify 10.10
+osx_image: xcode6.4 # specify 10.10
 
 env:
   - FORMULA=wxmac-mono
