--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - brew upgrade postgresql
   - psql --version
   - brew uninstall gdal
-  - brew install gdal --with-postgresql
+  - travis_wait 30 brew install gdal --with-postgresql
   - brew list
   - ogr2ogr --version
 
