remove posgresql; postgis; json-c first

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ before_install:
   # - brew cask install xquartz # not needed for 10.9????
   # - travis_wait 30 brew install --build-bottle $FORMULA
   # - brew bottle $FORMULA
-  - brew upgrade postgresql
+  - brew uninstall postgresql postgis gdal json-c
+  - brew missing
+  - brew install postgresql
   - psql --version
   - brew uninstall gdal
   - travis_wait 30 brew install gdal --with-postgresql
